lisk-dex-electron/src/SignInModal.css
#sign-in-modal {
  margin: auto;
  box-sizing: border-box;
  z-index: 200;
  width: 50%;
  background-color: rgb(27, 27, 27);
  height: 75%;
  overflow-y: auto;
  border: 1px solid #999999;
}

.sign-in-heading {
  margin-top: 0;
}

.sign-in-wrapper {
  position: relative;
}

.close-btn {
  position: absolute;
  top: 10px;
  right: 10px;
  font-size: 32px;
  cursor: pointer;
}

.form {
  padding: 30px;
}

.sign-in-progress-area {
  position: absolute;
  top: -8px;
  height: 20px;
  width: 100%;
  /* left: 5%; */
}

.sign-in-textarea {
  height: 46px;
  width: 100%;
  font-size: 20px;
  background-color: rgb(36, 35, 35);
  color: white;
  font-family: 'Courier New', Courier, monospace;
  margin-top: 10px;
  margin-bottom: 8px;
}

.sign-in-input {
  height: 30px;
  width: 100%;
  font-size: 20px;
  background-color: rgb(36, 35, 35);
  color: white;
  font-family: 'Courier New', Courier, monospace;
  margin-top: 10px;
  margin-bottom: 8px;
}

@media only screen and (max-width: 950px), only screen and (max-height: 700px) {
  #sign-in-modal {
    padding: 20px;
    border: 0;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
  }

  .sign-in-progress-area {
    position: fixed;
    top: -8px;
    left: 0;
    right: 0;
    height: 20px;
    /* width: 100%; */
    /* left: 5%; */
  }

  .close-btn {
    position: absolute;
    top: 0px;
    right: 0px;
    font-size: 32px;
  }

  .sign-in-textarea {
    height: 70px;
  }
}

